Add new route where we can get the user data
